# SimpleRustDownloader

./: .gitignore  :w:w  Cargo.toml  README.md
bak/: crawler.rs.bak
src/: app.rs  app_iced.rs  crawler.rs  main.rs  pdf_maker.rs  threaded_crawler.rs  urls.txt
