[package]
name = "SimpleRustDownloader-GUI"
version = "2.0.0"
edition = "2021"
authors = ["Taha", "Hashir"]

[dependencies]

colored = "2.1.0"
#eframe = "0.31.1"
#egui = "0.31.1"
crossterm = "0.28.1"
# error-chain = "0.12.4"
# ftp = "3.0.1"
futures = "0.3.30"
futures-util = "0.3.30"
# gtk4 = "0.9.5"
iced = {version = "0.13.1", features = ["tokio"]} 
jpeg-to-pdf = "0.2"
once_cell = "1.21.3"
# indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["blocking", "stream"] }
scraper = "0.19.0"
stop-thread = "0.2.0"
# select = "0.6.0"
# table-extract = "0.2.3"
# tauri = "1.6.8"
#  tempfile = "3.10.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ureq = "2.9.7"
